--- a/Ramble/Ramble-Info.plist
+++ b/Ramble/Ramble-Info.plist
@@ -37,6 +37,8 @@
 	<string>0.1.2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UILaunchImageFile</key>
 	<string>LaunchImage</string>
 	<key>UIMainStoryboardFile</key>
@@ -45,6 +47,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+    <key>UIPrerenderedIcon</key>
+    <true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
