Updated compass graphics

--- a/Ramble/Ramble-Info.plist
+++ b/Ramble/Ramble-Info.plist
@@ -25,7 +25,7 @@
 				<string>iTunesArtwork</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
-			<true/>
+			<false/>
 		</dict>
 		<key>UINewsstandIcon</key>
 		<dict>
@@ -77,8 +77,6 @@
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-	</array>
+	<array/>
 </dict>
 </plist>
